# cas_project

./: .gitignore  README.md  Test.html  kind-cluster.yaml  package-lock.json  topics
.next/: trace
.next/server/: _error.js  server-reference-manifest.js  server-reference-manifest.json  webpack-runtime.js
.next/server/pages/: _app.js  _document.js  _error.js
.next/server/vendor-chunks/: next.js
.next/static/chunks/: _error.js  app-pages-internals.js  webpack.js
.next/static/webpack/: webpack.7bd26ade8672532a.hot-update.js  webpack.cdb924082fef1bc8.hot-update.js
app/: settings.gradle.kts
app/app/: build.gradle.kts
app/gradle/wrapper/: gradle-wrapper.properties
backend/: Cargo.toml  README.md  backup.sql  create-topics.sh  docker-compose.yaml  docker-compose.yml  dockerfile  finaltest.html  init.sql  pyproject.toml  requiremets.txt  test.html  transport_data.csv
backend/sql/: create_tables.sql
backend/src/: alert_manager.py  altro.py  config.py  connection_manager.py  database.py  database_manager.py  kafka_manager.py  logging_utils.py  main.py  main.rs  test.py  user_alert_manager.py  websocket_server.py  withkafka.py
dev_env/: Dockerfile  docker-compose.yml  init.sql  server.js
frontend/: .dockerignore  .env  Dockerfile  docker-compose.yml  package-lock.json  package.json  tsconfig.json  types.ts
frontend/src/: types.ts
frontend/src/app/: layout.tsx  page.tsx
frontend/src/components/: MapContainer.tsx  layout.tsx  loading_spinner.tsx
frontend/src/contexts/: WebSocketProvider.tsx
frontend/src/hooks/: useGeofences.tsx  useUserMarkers.tsx
frontend/src/utils/: kMeans.tsx  (+1 more)
k8s/: backend.yaml  dnsutils.yaml  frontend.yaml  ingress.yaml  kafdrop.yaml  kafka.yaml  lb.yaml  persistent-volumes.yaml  postgis.yaml
mobile/: .gitignore  app.json  package-lock.json  package.json
mobile/app/: _layout.tsx
mobile/contexts/: ActivityContext.tsx  WebSocketProvider.tsx  alertContext.tsx  webSocketContext.tsx
mobile/hooks/: useWebSocket.ts
mobile/services/: notifications.tsx  websocket.ts
(+34 files in other folders)
