[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
bb8 = "0.8.5"
bb8-postgres = "0.8.1"
dotenv = "0.15.0"
env_logger = "0.11.5"
log = "0.4.22"
serde = { version = "1.0.205", features = ["derive"] }
serde_json = "1.0.122"
tokio = {version = "1.39.2", features = ["full"]}
tokio-postgres = "0.7.11"
ws = "0.9.2"
