[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
futures = "0.3.30"
geo-types = { version = "0.7.13", features = ["serde"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.40.0", features = ["full"] }
tokio-postgres = "0.7.12"
tokio-tungstenite = { version = "0.24.0", features = ["native-tls"] }
tungstenite = "0.17.3"
