[tool.poetry]
name = "websocket-location-tracker"
version = "0.1.0"
description = "Real-time location tracking WebSocket server"
authors = ["Grasso Emanuele", "Spada Davide"]

[tool.poetry.dependencies]
python = "^3.11"
asyncio = "^3.4.3"
asyncpg = "^0.28.0"
websockets = "^11.0.3"
aiokafka = "^0.8.1"
typing-extensions = "^4.8.0"

[tool.poetry.dev-dependencies]
pytest = "^7.4.3"
mypy = "^1.6.1"
flake8 = "^6.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"