[tool.poetry]
name = "websocket-location-tracker"
version = "0.1.0"
description = "Real-time location tracking WebSocket server"
authors = ["Grasso Emanuele", "Spada Davide"]

[tool.poetry.dependencies]
aiokafka = "^0.8.1"
asyncio = "^3.4.3"
asyncpg = "^0.28"
numpy = "^1.23"
pandas = "^1.3.3"
pyproj = "^3.7"
python = "^3.11"
scikit-learn = "^1.0.2"
shapely = "^2.0.6"
typing-extensions = "^4.8"
websockets = "^11.0.3"

[tool.poetry.dev-dependencies]
pytest = "^7.4.3"
mypy = "^1.6.1"
flake8 = "^6.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"